refactored app.js

--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,13 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
+
+
+.jumbotron {
+  text-align: center;
+}
+
+.App {
+  margin: 3%;
+  border: solid;
+}
